[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/vulkan.gd" type="Script" id=1]
[ext_resource path="res://assets/berge/vulkan2.png" type="Texture" id=2]
[ext_resource path="res://assets/smoke/smoke.png" type="Texture" id=3]
[ext_resource path="res://assets/stones/stone1.png" type="Texture" id=4]
[ext_resource path="res://assets/berge/vulkan1Emission.png" type="Texture" id=5]
[ext_resource path="res://assets/berge/vulkanFire.png" type="Texture" id=6]
[ext_resource path="res://assets/berge/vulkanSchlotMask.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.512987, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.363281, 0.363281, 0.363281, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 4.38
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, -1.08614, 0, 0, Vector2( 1, 2.19 ), -10.1108, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 11.04
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 20.0
flatness = 0.0
gravity = Vector3( 90, 0, 0 )
initial_velocity = 12.91
initial_velocity_random = 0.21
angular_velocity = 50.0
angular_velocity_random = 0.11
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 30.0
linear_accel_random = 0.0
radial_accel = 22.79
radial_accel_random = 0.58
tangential_accel = 32.11
tangential_accel_random = 0.0
damping = 20.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.61
scale_random = 0.78
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = true
_sections_unfolded = [ "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="Gradient" id=6]

offsets = PoolRealArray( 0, 0.0683371, 0.14123, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 0.696496, 0.585938, 1, 1, 1, 1, 1, 0.414062, 0.414062, 0.414062, 1 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="GradientTexture" id=7]

gradient = SubResource( 6 )
width = 2048

[sub_resource type="Gradient" id=8]

offsets = PoolRealArray( 0, 0.118451, 0.66287 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="GradientTexture" id=9]

gradient = SubResource( 8 )
width = 2048

[sub_resource type="Curve" id=10]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0860114, 0.994141 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.10821, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]

width = 2048
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]

render_priority = 0
trail_divisor = 2
trail_size_modifier = SubResource( 11 )
trail_color_modifier = SubResource( 9 )
emission_shape = 2
emission_box_extents = Vector3( 15, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( -98, 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.9
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 10.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.0
scale_random = 0.19
color_ramp = SubResource( 7 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="CanvasItemMaterial" id=13]

render_priority = 0
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id=14]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.996094, 0.982597, 0.132294, 1 ), Color( 0.746094, 0.738534, 0.262299, 1 ), Color( 1, 0.568146, 0.378906, 1 ) ]
}

[sub_resource type="Gradient" id=15]

offsets = PoolRealArray( 0.143508, 0.232346, 0.485194, 0.640091, 0.826879, 0.931663, 1 )
colors = PoolColorArray( 0.285714, 0.285714, 0.285714, 0, 0.308211, 0.308211, 0.308211, 0.0314961, 1, 1, 1, 1, 0.96875, 1, 0, 1, 0.398438, 0.398438, 0.398438, 0.567568, 1, 1, 1, 0, 0.780511, 0.780511, 0.780511, 0 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="GradientTexture" id=16]

gradient = SubResource( 15 )
width = 2048

[sub_resource type="ParticlesMaterial" id=17]

render_priority = 0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 0, 15, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 10.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 38.36
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 1.0
color_ramp = SubResource( 16 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="Animation" id=18]

length = 30.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("risingSmoke/Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("stoneParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("moreFire:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="vulkan" type="Node2D"]

modulate = Color( 0.761719, 0.761719, 0.761719, 1 )
position = Vector2( 1, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z" ]

[node name="background" type="Sprite" parent="."]

self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
scale = Vector2( 1.1, 0.9 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Region", "Transform", "Visibility", "Z" ]

[node name="risingSmoke" type="Node2D" parent="."]

position = Vector2( 21.2321, 6.98552 )
scale = Vector2( 0.509959, 0.509959 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="Particles2D" type="Particles2D" parent="risingSmoke"]

show_behind_parent = true
rotation = -1.47218
emitting = false
amount = 50
lifetime = 4.0
one_shot = false
preprocess = 0.0
speed_scale = 0.1
explosiveness = 0.0
randomness = 0.2
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 400, 500 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z" ]

[node name="stoneParticles" type="Particles2D" parent="."]

position = Vector2( 25.1875, 3.12457 )
rotation = -1.5708
emitting = false
amount = 100
lifetime = 6.0
one_shot = false
preprocess = 0.0
speed_scale = 0.4
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 500 )
local_coords = true
draw_order = 0
process_material = SubResource( 12 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform" ]

[node name="fire" type="Sprite" parent="."]

visible = false
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 13 )
scale = Vector2( 1.1, 0.9 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="firePlayer" type="AnimationPlayer" parent="fire"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/vulkanFireFlickr = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options", "playback" ]

[node name="moreFire" type="Particles2D" parent="."]

position = Vector2( 27.2992, 20.4661 )
rotation = -1.5708
emitting = false
amount = 10
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 0.3
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 17 )
texture = ExtResource( 6 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="foreground" type="Sprite" parent="."]

self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
scale = Vector2( 1.1, 0.9 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Material", "Region", "Transform", "Visibility", "Z" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="foreground"]

position = Vector2( 31.4121, 39.4762 )
scale = Vector2( 15.6205, 4.94762 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/vulkanErruption = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options", "playback" ]

[connection signal="screen_exited" from="foreground/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


